@@ -8,29 +8,24 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.Arrays;
 import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
-    private final UserService userService;
+  private final UserService userService;
 
-    public UserDetailsServiceImpl(UserService userService) {
-        this.userService = userService;
-    }
+  public UserDetailsServiceImpl(UserService userService) {
+    this.userService = userService;
+  }
 
-    @Override
-    public UserDetails loadUserByUsername(String login) throws UsernameNotFoundException {
-        CustomUser customUser = userService.findByLoginOrEmail(login);
-        if (customUser == null)
-            throw new UsernameNotFoundException(login + " not found");
+  @Override
+  public UserDetails loadUserByUsername(String login) throws UsernameNotFoundException {
+    CustomUser customUser = userService.findByLoginOrEmail(login);
+    if (customUser == null) throw new UsernameNotFoundException(login + " not found");
 
-        List<GrantedAuthority> roles = Arrays.asList(
-                new SimpleGrantedAuthority(customUser.getRole().toString())
-        );
+    List<GrantedAuthority> roles =
+        List.of(new SimpleGrantedAuthority(customUser.getRole().toString()));
 
-        return new User(customUser.getLogin(), customUser.getPassword(), roles);
-    }
+    return new User(customUser.getLogin(), customUser.getPassword(), roles);
+  }
 }
-
